# InheritX

./: middleware.ts  next.config.ts  package-lock.json
app/asset-owner/components/: Sidebar.tsx
app/asset-owner/emergency/: page.tsx
app/asset-owner/emergency/components/: AuditLog.tsx  ContactManagement.tsx  EmergencyStatus.tsx  GuardianConfig.tsx  RequestInterface.tsx
app/lib/api/: emergency.ts
app/svg/: EmergencyIcon.tsx
backend/: Cargo.toml  env.example
backend/docs/: BACKUP_STRATEGY.md
backend/scripts/: backup.sh  backup_monitor.sh  restore.sh
backend/src/: api_error.rs  app.rs  circuit_breaker.rs  config.rs  db.rs  error_tracking.rs  external_price_fetcher.rs  lending_notification_service.rs  lib.rs  main.rs  metrics.rs  middleware.rs  notifications.rs  retry.rs  secrets.rs  service.rs  telemetry.rs  validation.rs
backend/tests/: emergency_access_dashboard_api.rs
backend/tests/helpers/: mod.rs
contracts/borrowing-contract/src/: lib.rs  test.rs
contracts/borrowing-contract/test_snapshots/test/: test_create_loan.1.json  test_extend_inactive_loan_fails.1.json  test_extend_loan.1.json  test_extend_loan_fee_calculation.1.json  test_extend_loan_limit_reached.1.json  test_get_max_additional_borrow_inactive_fails.1.json  test_global_pause.1.json  test_increase_inactive_loan_fails.1.json  test_increase_loan_amount.1.json  test_increase_loan_exceeds_collateral_fails.1.json  test_increase_loan_invalid_amount_fails.1.json  test_liquidation.1.json  test_liquidation_auction.1.json  test_partial_liquidation.1.json  test_repay_loan.1.json  test_vault_pause.1.json
contracts/governance-contract/src/: lib.rs
contracts/governance-contract/test_snapshots/test/: test_delegation_history_tracking.1.json  test_delegation_overwrite.1.json  test_undelegate_then_vote.1.json  test_undelegation_flow.1.json
contracts/inheritance-contract/: err.txt  out.txt
contracts/inheritance-contract/src/: cross_contract_test.rs  lib.rs  message_test.rs  test.rs
contracts/inheritance-contract/test_snapshots/cross_contract_test/: test_get_lending_contract_returns_none_when_unset.1.json  test_set_and_get_contracts.1.json  test_set_lending_contract_unauthorized.1.json  test_verify_plan_ownership_no_plan.1.json
contracts/inheritance-contract/test_snapshots/message_test/: test_message_accessed_event.1.json  test_message_created_event.1.json  test_message_finalized_event.1.json  test_message_lifecycle_events.1.json  test_message_updated_event.1.json
contracts/inheritance-contract/test_snapshots/test/: test_activate_and_deactivate_emergency_access.1.json  test_add_beneficiary_allocation_exceeds_limit.1.json  (+177 more)
contracts/lending-contract/src/: cross_contract_test.rs  lib.rs
contracts/loan-nft/src/: lib.rs
(+62 files in other folders)
